# fenn

./: .gitignore  .gitlab-ci.yml  README.md
.github/workflows/: ci-be.yml  ci-fe.yml  ci.yml  deploy.yml
fenn-be/: .example.env  .gitignore  Cargo.toml  Dockerfile  rustfmt.toml
fenn-be/migrations/2021-02-10-072515_create_poll/: down.sql  up.sql
fenn-be/src/: controller.rs  dto.rs  main.rs  route.rs  schema.rs
fenn-be/src/dto/: common.rs  mod.rs  poll.rs
fenn-be/src/models/: mod.rs  poll.rs  poll_option.rs
fenn-fe/: .gitignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
fenn-fe/src/: App.tsx  App.vue  main.tsx
fenn-fe/src/components/: App.tsx  HelloWorld.vue  Home.tsx  Home.vue  NavBar.tsx  NavDrawer.tsx  NewPoll.tsx  routes.tsx
fenn-fe/src/components/navs/: NavBar.tsx  NavDrawer.tsx
fenn-fe/src/components/polls/: FillPoll.tsx  NewPoll.tsx
fenn-fe/src/types/: Poll.tsx
