[package]
name = "fenn-be"
version = "0.1.0"
authors = ["Ilman Nafian <milmannafian04@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
dotenv = "0.15.0"
log = "0.4.14"
env_logger = "0.8.2"
